// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contract Details - MOBILE ContractLineItem - Snapshot match while loading 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="contract-line-item-container-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-jy51o4-MuiGrid-root"
      data-testid="row_test0"
      id="row_test0"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-4 css-j5ii80-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
              style="height: 100%;"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-3vdko4-MuiGrid-root"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="height: 24px;"
        />
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
          style="height: 32px;"
        />
        <div
          class="MuiGrid-root MuiGrid-container css-1uyvchb-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-awbw1a-MuiTypography-root"
            >
              Part#
               
              <div
                class="MuiTypography-root MuiTypography-body1 css-1pki3pl-MuiTypography-root"
                data-testid="part-number"
              >
                TESTPART1
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-36a8ki-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1mkyfc4-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
              style="height: 36px;"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1mkyfc4-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
              style="height: 36px;"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1mkyfc4-MuiGrid-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
              style="height: 36px;"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-2 css-tnc1l5-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-1oeflo8-MuiGrid-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                style="height: 36px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-z8885q-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`Contract Details - MOBILE ContractLineItem - Snapshot match with data 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="contract-line-item-container-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-jy51o4-MuiGrid-root"
      data-testid="row_test0"
      id="row_test0"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-4 css-j5ii80-MuiGrid-root"
          >
            <img
              alt="Product picture"
              class="MuiBox-root css-4w7ia0"
              data-testid="product-picture"
              src="https://images.tradeservice.com/ProductImages/DIR100108/OOATEY_31911_SML.jpg"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-3vdko4-MuiGrid-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1q478d5-MuiTypography-root"
          data-testid="mfr-name"
        >
          Test Brand 1
        </div>
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-efujjh-MuiTypography-root"
          data-testid="product-name"
        >
          Test Item 1
        </div>
        <div
          class="MuiGrid-root MuiGrid-container css-1uyvchb-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 css-awbw1a-MuiTypography-root"
            >
              Part#
               
              <div
                class="MuiTypography-root MuiTypography-body1 css-1pki3pl-MuiTypography-root"
                data-testid="part-number"
              >
                TESTPART1
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-36a8ki-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1mkyfc4-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-a8cswb-MuiTypography-root"
              data-testid="product-price"
            >
              $1.99
               
              ea
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1mkyfc4-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-a8cswb-MuiTypography-root"
              data-testid="contract-quantity"
            >
              123
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1mkyfc4-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-a8cswb-MuiTypography-root"
              data-testid="released-quantity"
            >
              52
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-2 css-tnc1l5-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-1oeflo8-MuiGrid-root"
            >
              <div
                class="number-input__container full-width"
              >
                <div
                  class="number-input__button-container small"
                  style="width: 1.25rem;"
                >
                  <button
                    class="number-input__button"
                    data-testid="quantity-input-down"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="RemoveIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </button>
                </div>
                <input
                  class="number-input__input small"
                  data-testid="contract-qty-input0"
                  min="0"
                  value="0"
                />
                <div
                  class="number-input__button-container small"
                  style="width: 1.25rem;"
                >
                  <button
                    class="number-input__button"
                    data-testid="quantity-input-up"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="AddIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-z8885q-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`Contract Details - MOBILE ContractLineItem - Snapshot match with no data 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
    data-testid="contract-line-item-container-undefined"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-jy51o4-MuiGrid-root"
      data-testid="row_undefined"
      id="row_undefined"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-4 css-j5ii80-MuiGrid-root"
          >
            <img
              alt="Product picture"
              class="MuiBox-root css-4w7ia0"
              data-testid="product-picture"
              src="notfound.png"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-3vdko4-MuiGrid-root"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1q478d5-MuiTypography-root"
          data-testid="mfr-name"
        />
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-efujjh-MuiTypography-root"
          data-testid="product-name"
        />
        <div
          class="MuiGrid-root MuiGrid-container css-1uyvchb-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-36a8ki-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1mkyfc4-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-a8cswb-MuiTypography-root"
              data-testid="product-price"
            >
              $0.00
               
              ea
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1mkyfc4-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-a8cswb-MuiTypography-root"
              data-testid="contract-quantity"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1mkyfc4-MuiGrid-root"
          >
            <div
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-a8cswb-MuiTypography-root"
              data-testid="released-quantity"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-2 css-tnc1l5-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-1oeflo8-MuiGrid-root"
            >
              <div
                class="number-input__container full-width"
              >
                <div
                  class="number-input__button-container small"
                  style="width: 1.25rem;"
                >
                  <button
                    class="number-input__button"
                    data-testid="quantity-input-down"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="RemoveIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </button>
                </div>
                <input
                  class="number-input__input small"
                  data-testid="contract-qty-input0"
                  min="0"
                  value="0"
                />
                <div
                  class="number-input__button-container small"
                  style="width: 1.25rem;"
                >
                  <button
                    class="number-input__button"
                    data-testid="quantity-input-up"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="AddIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-z8885q-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`Contract Details - MOBILE ContractListComment - Snapshot match with comment 1`] = `
<div>
  <div
    class="MuiBox-root css-b07d9q"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-anhh33-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-17g5hml-MuiGrid-root"
      >
        <div>
          TEST COMMENT
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Contract Details - MOBILE ContractListComment - Snapshot match without comment 1`] = `
<div>
  <div
    class="MuiBox-root css-b07d9q"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-anhh33-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-17g5hml-MuiGrid-root"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`Contract Details - MOBILE ContractProductDetailsModal - Snapshot match with data 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiModal-root MuiDialog-root css-zw3mfo-MuiModal-root-MuiDialog-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-15p4qre-MuiDialog-container"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-labelledby="mui-13"
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthMd MuiDialog-paperFullWidth MuiDialog-paperFullScreen css-12rmakj-MuiPaper-root-MuiDialog-paper"
        role="dialog"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-tszvf-MuiTypography-root-MuiDialogTitle-root"
          id="mui-13"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-eeiw55-MuiButtonBase-root-MuiIconButton-root"
            data-testid="contract-product-modal-close-button-top"
            tabindex="0"
            type="button"
          >
            <svg>
              delete.svg
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <div
            class="MuiBox-root css-1a88wtd"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignLeft css-tdpsb9-MuiTypography-root"
              data-testid="product-details-header"
            >
              Product Details
            </h5>
          </div>
        </h2>
        <div
          class="MuiDialogContent-root css-ypiqx9-MuiDialogContent-root"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthLg MuiBox-root css-klz80g-MuiContainer-root"
            data-testid="contract-product-details-container"
          >
            <div
              class="MuiGrid-root MuiGrid-container css-o1xwpy-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-4 css-xbmj5n-MuiGrid-root"
              >
                <img
                  alt="Product picture"
                  class="MuiBox-root css-4w7ia0"
                  data-testid="product-picture"
                  src="https://images.tradeservice.com/ProductImages/DIR100108/OOATEY_31911_SML.jpg"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
              >
                <div
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1q478d5-MuiTypography-root"
                  data-testid="mfr-name"
                >
                  Test Brand 1
                </div>
                <div
                  class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
                  data-testid="product-name"
                >
                  Test Item 1
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container css-1fcm2ua-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
                  >
                    <div
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1q478d5-MuiTypography-root"
                    >
                      Part#
                       
                      <div
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1fzpubk-MuiTypography-root"
                        data-testid="part-number"
                      >
                        TESTPART1
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
                  >
                    <div
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1q478d5-MuiTypography-root"
                    >
                      MFR#
                       
                      <div
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1fzpubk-MuiTypography-root"
                        data-testid="mfr-number"
                      >
                        TB1-001-TI1
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container css-t4zm44-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <h5
                  class="MuiTypography-root MuiTypography-body1 css-2xxltb-MuiTypography-root"
                >
                  Technical Documents
                </h5>
                <div
                  class="MuiGrid-root MuiGrid-container css-17jym42-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                      data-testid="test-doc"
                      href="https://google.com"
                      target="_blank"
                    >
                      <button
                        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1e09mci-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                        >
                          <svg>
                            technical-specs.svg
                          </svg>
                        </span>
                        Test Doc
                      </button>
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                      data-testid="testing-procedures"
                      href="*"
                      target="_blank"
                    >
                      <button
                        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1e09mci-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                        >
                          <svg>
                            technical-specs.svg
                          </svg>
                        </span>
                        Testing Procedures
                      </button>
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                      data-testid="dos-and-donts"
                      href="*"
                      target="_blank"
                    >
                      <button
                        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1e09mci-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                        >
                          <svg>
                            technical-specs.svg
                          </svg>
                        </span>
                        Do's and don'ts
                      </button>
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                      data-testid="warranty"
                      href="*"
                      target="_blank"
                    >
                      <button
                        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1e09mci-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                        >
                          <svg>
                            technical-specs.svg
                          </svg>
                        </span>
                        Warranty
                      </button>
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                      data-testid="terms-of-service"
                      href="*"
                      target="_blank"
                    >
                      <button
                        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1e09mci-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                        >
                          <svg>
                            technical-specs.svg
                          </svg>
                        </span>
                        Terms of Service
                      </button>
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                      data-testid="additional-details"
                      href="*"
                      target="_blank"
                    >
                      <button
                        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1e09mci-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                        >
                          <svg>
                            technical-specs.svg
                          </svg>
                        </span>
                        Additional Details
                      </button>
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                      data-testid="null"
                      href=""
                      target="_blank"
                    >
                      <button
                        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1e09mci-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                        >
                          <svg>
                            technical-specs.svg
                          </svg>
                        </span>
                        
                      </button>
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                      data-testid="null"
                      href="#"
                      target="_blank"
                    >
                      <button
                        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1e09mci-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                        >
                          <svg>
                            technical-specs.svg
                          </svg>
                        </span>
                        
                      </button>
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
                  >
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                      data-testid="no-url"
                      href=""
                      target="_blank"
                    >
                      <button
                        class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1e09mci-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                        >
                          <svg>
                            technical-specs.svg
                          </svg>
                        </span>
                        No URL
                      </button>
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <h5
                  class="MuiTypography-root MuiTypography-body1 css-2xxltb-MuiTypography-root"
                >
                  Technical Specifications
                </h5>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
                  >
                    <div
                      class="MuiTableContainer-root css-x7f8rh-MuiTableContainer-root"
                    >
                      <table
                        class="MuiTable-root css-14mhd3s-MuiTable-root"
                      >
                        <tbody
                          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              length: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="length"
                            >
                              10'
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              material: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="material"
                            >
                              CPVC
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              pressure_rating: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="pressure-rating"
                            >
                              400 PSI at 73 Deg F
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              temperature_rating: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="temperature-rating"
                            >
                              180 Deg F
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Applicable Standard: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="applicable-standard"
                            >
                              NSF 14/61
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Application: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="application"
                            >
                              Drinking Water System, Hot and Cold Water Distribution
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Cpvc Pipe: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="cpvc-pipe"
                            >
                              1
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              End Connection: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="end-connection"
                            >
                              Plain x Plain
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Length: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="length"
                            >
                              10'
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Material: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="material"
                            >
                              CPVC
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Material Specification: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="material-specification"
                            >
                              ASTM D1784/D2846
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Nominal Pipe Size: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="nominal-pipe-size"
                            >
                              3/4"
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Pipe: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="pipe"
                            >
                              2
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Pressure Rating: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="pressure-rating"
                            >
                              400 PSI at 73 Deg F
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Schedule: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="schedule"
                            >
                              SDR 11
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Temperature Rating: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="temperature-rating"
                            >
                              180 Deg F
                            </td>
                          </tr>
                          <tr
                            class="MuiTableRow-root css-bqkitb-MuiTableRow-root"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-zo3ar0-MuiTableCell-root"
                            >
                              Thickness: 
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mfg996-MuiTableCell-root"
                              data-testid="thickness"
                            >
                              0.08"
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container css-1lym95h-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
              >
                <button
                  class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-disableElevation MuiButtonBase-root  css-rsojkw-MuiButtonBase-root-MuiButton-root"
                  data-testid="contract-product-modal-close-button-bottom"
                  tabindex="0"
                  type="button"
                >
                  Close Details
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Contract Details - MOBILE ContractProductDetailsModal - Snapshot match without data 1`] = `
<body
  style=""
>
  <div />
</body>
`;

exports[`Contract Details - MOBILE ContractProductList - Snapshot match 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root MuiBox-root css-153b6os-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-pl9hs7"
      data-testid="branch-sidebar-backdrop"
      style="opacity: 0; visibility: hidden;"
    />
    <div
      class="MuiBox-root css-96jqp"
    />
    <div
      class="MuiGrid-root MuiGrid-container css-n0tbj3-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-1yb3zjo-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h5
            class="MuiTypography-root MuiTypography-body1 css-155odpz-MuiTypography-root"
          >
            Search Products
          </h5>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item css-lx31tv-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1hardch-MuiFormControl-root-MuiTextField-root"
            >
              <div
                class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                  data-testid="contract-search-input-top"
                  id="mui-3"
                  placeholder="Description, Sequence#, Part #"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-nnbavb"
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-u1rrbo-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <button
                class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
                data-testid="contract-search-button-top"
                disabled=""
                tabindex="-1"
                type="button"
              >
                Search
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <button
                class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-wyox7y-MuiButtonBase-root-MuiButton-root"
                data-testid="contract-searchclear-button-top"
                disabled=""
                tabindex="-1"
                type="button"
              >
                Clear
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-w10v0y-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <button
              class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-l8mtqw-MuiButtonBase-root-MuiButton-root"
              data-testid="contract-clearqtys-button-top"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Clear Qtys
            </button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <button
              class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-u8fevl-MuiButtonBase-root-MuiButton-root"
              data-testid="contract-releasetocart-button-top"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Release to Cart
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1trzy3l"
    />
    <div
      class="MuiBox-root css-zv7ju9"
      data-testid="product-search-list-container"
      id="product-search-list-container"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-ajrtt9-MuiGrid-root"
      >
        <h5
          class="MuiTypography-root MuiTypography-body1 css-k3rnsl-MuiTypography-root"
          data-testid="contract-product-list-empty"
        >
          No products were found
        </h5>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-n0tbj3-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-w10v0y-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <button
              class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-l8mtqw-MuiButtonBase-root-MuiButton-root"
              data-testid="contract-clearqtys-button-bottom"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Clear Qtys
            </button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <button
              class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-u8fevl-MuiButtonBase-root-MuiButton-root"
              data-testid="contract-releasetocart-button-bottom"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Release to Cart
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Contract Details - MOBILE ContractProductList - Snapshot match for empty list 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root MuiBox-root css-153b6os-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-pl9hs7"
      data-testid="branch-sidebar-backdrop"
      style="opacity: 0; visibility: hidden;"
    />
    <div
      class="MuiBox-root css-96jqp"
    />
    <div
      class="MuiGrid-root MuiGrid-container css-n0tbj3-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-1yb3zjo-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h5
            class="MuiTypography-root MuiTypography-body1 css-155odpz-MuiTypography-root"
          >
            Search Products
          </h5>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item css-lx31tv-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1hardch-MuiFormControl-root-MuiTextField-root"
            >
              <div
                class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-invalid="false"
                  class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                  data-testid="contract-search-input-top"
                  id="mui-6"
                  placeholder="Description, Sequence#, Part #"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-nnbavb"
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-u1rrbo-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <button
                class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
                data-testid="contract-search-button-top"
                disabled=""
                tabindex="-1"
                type="button"
              >
                Search
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <button
                class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-wyox7y-MuiButtonBase-root-MuiButton-root"
                data-testid="contract-searchclear-button-top"
                disabled=""
                tabindex="-1"
                type="button"
              >
                Clear
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-w10v0y-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <button
              class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-l8mtqw-MuiButtonBase-root-MuiButton-root"
              data-testid="contract-clearqtys-button-top"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Clear Qtys
            </button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <button
              class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-u8fevl-MuiButtonBase-root-MuiButton-root"
              data-testid="contract-releasetocart-button-top"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Release to Cart
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1trzy3l"
    />
    <div
      class="MuiBox-root css-zv7ju9"
      data-testid="product-search-list-container"
      id="product-search-list-container"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-ajrtt9-MuiGrid-root"
      >
        <h5
          class="MuiTypography-root MuiTypography-body1 css-k3rnsl-MuiTypography-root"
          data-testid="contract-product-list-empty"
        >
          No products were found
        </h5>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-n0tbj3-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-w10v0y-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <button
              class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-l8mtqw-MuiButtonBase-root-MuiButton-root"
              data-testid="contract-clearqtys-button-bottom"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Clear Qtys
            </button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <button
              class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-u8fevl-MuiButtonBase-root-MuiButton-root"
              data-testid="contract-releasetocart-button-bottom"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Release to Cart
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Contract Details - MOBILE ContractProductListControls - Snapshot match 1`] = `
<body>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container css-n0tbj3-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-nv4bdy-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 css-w10v0y-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <button
              class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-l8mtqw-MuiButtonBase-root-MuiButton-root"
              data-testid="contract-clearqtys-button-test"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Clear Qtys
            </button>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-auto css-1tsghma-MuiGrid-root"
          >
            <button
              class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-u8fevl-MuiButtonBase-root-MuiButton-root"
              data-testid="contract-releasetocart-button-test"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Release to Cart
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
